changement articles magasin

--- a/magasin.html
+++ b/magasin.html
@@ -54,14 +54,14 @@
     <tr>
         <td><input type="image" src="image/magasin/tapis.png" style="width: 10em" alt="tapis" id="tapis" value="5" onclick="quest('tapis')"><br>5 pièces</td>
         <td><input type="image" src="image/magasin/table_salon.png" style="width: 10em " alt="table de café" id="table_salon" value="10" onclick="quest('table_salon')"><br>10 pièces</td>
-        <td><input type="image" src="image/magasin/etoile.png" style="width: 10em" alt="etoile" id="etoile" value="5" onclick="quest('etoile')"><br>5 pièces</td>
-        <td><input type="image" src="image/magasin/fleur.png" style="width: 10em" alt="fleur" id="fleur" value="5" onclick="quest('fleur')"><br>5 pièces</td>
+        <td><input type="image" src="image/magasin/cloche.png" style="width: 10em" alt="cloche" id="cloche" value="5" onclick="quest('cloche')"><br>5 pièces</td>
+        <td><input type="image" src="image/magasin/canape.png" style="width: 10em" alt="canapé" id="canape" value="15" onclick="quest('canape')"><br>15 pièces</td>
     </tr>
     <tr>
-        <td><input type="image" src="image/magasin/mandala.png" style="width: 10em" alt="mandala" id="mandala" value="10" onclick="quest('mandala')"><br>10 pièces</td>
-        <td><input type="image" src="image/magasin/rosace.png" style="width: 10em" alt="rosace" id="rosace" value="15" onclick="quest('rosace')"><br>15 pièces</td>
-        <td><input type="image" src="image/magasin/cercle.png" style="width: 10em " alt="cercle" id="cercle" value="10" onclick="quest('cercle')"><br>10 pièces</td>
-        <td><input type="image" src="image/magasin/spirale.png" style="width: 10em" alt="spirale" id="spirale" value="15" onclick="quest('spirale')"><br>15 pièces</td>
+        <td><input type="image" src="image/magasin/fontaine.png" style="width: 10em" alt="fontaine" id="fontaine" value="10" onclick="quest('fontaine')"><br>10 pièces</td>
+        <td><input type="image" src="image/magasin/lavande.png" style="width: 10em" alt="panier de lavande" id="lavande" value="4" onclick="quest('lavande')"><br>4 pièces</td>
+        <td><input type="image" src="image/magasin/tableau.png" style="width: 10em " alt="tableau" id="tableau" value="20" onclick="quest('tableau')"><br>20 pièces</td>
+        <td><input type="image" src="image/magasin/lampe.png" style="width: 10em" alt="lampe murale" id="lampe" value="3" onclick="quest('lampe')"><br>3 pièces</td>
     </tr>
 </table>
 </body>
