--- a/caisse.html
+++ b/caisse.html
@@ -30,14 +30,14 @@
     <img id="porte" title="SORTIR" onclick="location='exterieur.html'" src="image/magasin/porte_delabree.png" style="position:absolute;width: 12%; height: 40%; left: 30%; bottom: 42%">
     <img id="fenetre" src="image/magasin/fenetre_delabree.png" style="position:absolute;width: 12%; right: 42%; top: 24%">
     <img id="fenetre_droite" src="image/magasin/fenetre_droite_delabree.png" style="position:absolute;width: 7%; right: 15%; top: 20%">
-    <img id="table_salon" src="image/magasin/table_salon.png" style="display: none; position: absolute;    width: 16%; top: 45%; right: 33%">
-    <img id="etoile" src="" style="width: 10em; position: absolute; top: 5em; left: 5em;">
-    <img id="fleur" src="" style="width: 10em; position: absolute; top: 5em; left: 15em;">
-    <img id="cercle" src="" style="width: 10em; position: absolute; top: 5em; left: 25em;">
-    <img id="mandala" src="" style="width: 10em; position: absolute; top: 5em; left: 35em;">
-    <img id="rosace" src="" style="width: 10em; position: absolute; top: 5em; left: 45em;">
-    <img id="spirale" src=""     style="width: 10em; position: absolute; top: 5em; left: 55em;">
-    <img id="tapis" hidden src="image/magasin/tapis.png" style="position: absolute ;width: 15%; left: 27%; top: 47%">
+    <img id="cloche" src="image/magasin/cloche.png" style="display:none;width: 3%; position: absolute; top: 11%; left: 35%;transform: scaleX(-1); transform: rotate(30deg)">
+    <img id="canape" src="image/magasin/canape.png" style="display:none;position: absolute;    width: 21%; top: 35%; right: 33%">
+    <img id="fontaine" src="image/magasin/fontaine.png" style="display:none;width: 15%; position: absolute; top: 40%; right: 19%">
+    <img id="lavande" src="image/magasin/lavande.png"     style="display:none;transform: scaleX(-1);width: 10%; position: absolute; top: 55%; right: 18%">
+    <img id="table_salon" src="image/magasin/table_salon.png" hidden style="position: absolute;    width: 18%; top: 65%; right: 22%">
+    <img id="tableau" src="image/magasin/tableau.png" style="display: none;width: 8%; position: absolute; top: 8%; right: 33%">
+    <img id="lampe" src="image/magasin/lampe.png" style="display:none;width: 6%; position: absolute; top: 18%; left: 5%;">
+    <img id="tapis"  src="image/magasin/tapis.png" style="display:none;position: absolute ;width: 15%; left: 27%; top: 47%">
     <img onclick="location='stock.html'" title="VOIR MES PRODUITS" id="presentoire" src="image/presentoire_niveau0.png" style="position: absolute ;width: 15%;  top: 50%; transform: scaleX(-1)">
 </div>
 
