preload, on enlève ancien load car marche pas

--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
 <body >
 
 <div class="preload">
-    <img src="image/avion.png" alt="avion" class="avion">
+    <img src="image/chat.png" alt="avion" class="avion">
     <h3>Chargement de My Bakery...</h3>
-    <img class="nuage1" src="image/nuage.png" alt="nuage1">
-    <img class="nuage2" src="image/nuage.png" alt="nuage2">
-    <img class="nuage3" src="image/nuage.png" alt="nuage3">
+
     <iframe  hidden src="caisse.html"></iframe>
     <iframe  hidden src="exterieur.html"></iframe>
     <iframe  hidden src="magasin.html"></iframe>
