--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
     <iframe  hidden src="tuto_stock.html"></iframe>
 
 </div>
-
+<p style="padding-top: 50%;position: absolute; top: 0; width:100%;height: 100%;">
+    Tourne l'écran dans l'autre sens
+</p>
 <section>
     <h1>Arrived</h1>
     <script src="chargement_elements.js"></script>
@@ -60,4 +62,5 @@
 </section>
 
 </body>
+
 </html>
