--- a/exterieur.html
+++ b/exterieur.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="chargement_elements.css">
+    <link rel="stylesheet" type="text/css" href="menu.css" />
 
 </head>
 <body style="
@@ -23,7 +24,34 @@ margin: 0;
 
 <section>
     <img src="image/paysage_exterieur.png" style=" position: absolute; top: 0; width:100%;height: 100%;">
+    <div class="dropdown" style="float: left; position: absolute">
+        <button onclick="myFunction()" class="dropbtn" style="color:#555555;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">MENU</button>
+        <div id="myDropdown" class="dropdown-content">
+            <a href="./index.html">Menu principal</a>
+            <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
+            <a href="supprimer_joueur.html">Supprimer ma partie</a>
+            <a href="demandeEnregistrement_importer.html" id="seco" >Importer une partie</a>
+        </div>
+    </div>
+    <script>/* When the user clicks on the button,
+toggle between hiding and showing the dropdown content */
+    function myFunction() {
+        document.getElementById("myDropdown").classList.toggle("show");
+    }
 
+    // Close the dropdown menu if the user clicks outside of it
+    window.onclick = function(event) {
+        if (!event.target.matches('.dropbtn')) {
+            var dropdowns = document.getElementsByClassName("dropdown-content");
+            var i;
+            for (i = 0; i < dropdowns.length; i++) {
+                var openDropdown = dropdowns[i];
+                if (openDropdown.classList.contains('show')) {
+                    openDropdown.classList.remove('show');
+                }
+            }
+        }
+    }</script>
 <img src="image/fleche.svg" style="position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="BOULANGERIE" onclick="location='caisse.html'">
 <div id="magasin" style="font-size: 2em;position: absolute; left: 18%; top: 30%; width: 35%; height: 43%;" onclick="location='magasin.html'">
         <span style="font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered;position:absolute; top: 20%; left: 30%">
