--- a/stock.html
+++ b/stock.html
@@ -20,12 +20,7 @@
     Tourne l'écran dans l'autre sens
 </p>
 <section>
-    <script src="chargement_elements.js"></script>
-
-
-
-
-
+    <script src="charger.js"></script>
 
 <img src="image/fleche.svg" style="position: absolute; bottom: 0; left: 0;width: 7em; transform: rotate(-90deg)" title="RETOUR" onclick="location='caisse.html'">
 
@@ -244,11 +239,5 @@ right:67px;
         display: block;
     }
 </style>
-<script >
-    window.addEventListener('load', () =>  {
 
-        const preload = document.querySelector(".preload")
-        preload.classList.add("preload-finish")
-
-    });</script>
 </html>
