--- a/caisse.html
+++ b/caisse.html
@@ -24,6 +24,7 @@ margin: 0;
     Tourne l'écran dans l'autre sens
 </p>
 <section>
+    <script src="charger.js"></script>
 
     <img src="image/fondfinal.png" style=" position: absolute; top: 0; width:100%;height: 100%;">
     <div class="dropdown" style="top:2px; left:2px;position: absolute">
@@ -743,11 +744,5 @@ margin: auto;
 }
 
 </style>
-<script>
-    window.addEventListener('load', () =>  {
 
-        const preload = document.querySelector(".preload")
-        preload.classList.add("preload-finish")
-
-    });</script>
 </html>
