--- a/exterieur.html
+++ b/exterieur.html
@@ -23,6 +23,10 @@ margin: 0;
 </p>
 
 <section>
+    <script src="charger.js"></script>
+
+
+
     <img src="image/paysage_exterieur.png" style=" position: absolute; top: 0; width:100%;height: 100%;">
     <div class="dropdown" style="float: left; position: absolute">
         <button onclick="myFunction()" class="dropbtn" style="color:#555555;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">MENU</button>
@@ -66,11 +70,5 @@ toggle between hiding and showing the dropdown content */
     }
 </style>
 
-<script >
-    window.addEventListener('load', () =>  {
 
-        const preload = document.querySelector(".preload")
-        preload.classList.add("preload-finish")
-
-    });</script>
 </html>
