--- a/magasin.html
+++ b/magasin.html
@@ -32,6 +32,10 @@ margin: 0;
 </p>
 
 <section>
+
+    <script src="charger.js"></script>
+
+
     <img src="image/fond_magasin.jpg" style=" position: absolute; top: 0; width:100%;height: 100%;">
     <div style="position:absolute; text-align: center; width: 100%; height: 95%">
         <!--MENU-->
@@ -220,11 +224,4 @@ margin: 0;
 
 
 </body>
-<script >
-    window.addEventListener('load', () =>  {
-
-        const preload = document.querySelector(".preload")
-        preload.classList.add("preload-finish")
-
-    });</script>
 </html>
